# FaceMover

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Shaderrs/: frag.frag  includer.hpp  ranso.vert  shades.hpp
info/: glfw_info.txt  glm_info.txt  openGL_info.txt
src/: entry.cpp
texturres/: texturre.hpp
